--- a/atoms/blockquotes/blockquotes.html
+++ b/atoms/blockquotes/blockquotes.html
@@ -94,7 +94,7 @@
         <h1 class="title">Blockquotes</h1>
         <p>The blockquote element represents a section that is quoted from another source. Content inside a blockquote must be quoted from another source, whose address, if it has one, may be cited in the cite attribute.</p>
         <p><cite><a href="https://html.spec.whatwg.org/multipage/grouping-content.html#the-blockquote-element" target="_blank">HTML Living Standard</a></cite></p>
-        <p>As with other modules in the Delta Design System, we separate the function of a blockquote from the presentation of a blockquote. In other words, don't think of blockquotes only in terms of their style, but also what they represent in the absence of style.</p>
+        <p>As with other modules in the Delta Design System, we separate the function of a blockquote from the presentation of a blockquote. In other words, don&rsquo;t think of blockquotes only in terms of their style, but also what they represent in the absence of style.</p>
         <p>Searching the internet, there are many different ways to mark-up blockquotes. The Delta Design System mostly adheres to the approach illustrated by <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/blockquote" target="_blank">MDN web docs</a>:</p>
         <ul>
           <li>We add a <code>&lt;cite&gt;</code> to the opening <code>&lt;blockquote&gt;</code> tag.</li>
@@ -148,7 +148,7 @@
         </div>
       </section>
       <div class="copyright">
-        <p>&copy; 2020 Delta Design System. Conceived and developed by <a href="https://chris.blackcoffeeshoppe.com" target="_blank">Chris Fournier</a>.</p>
+        <p>&copy; 2021 Delta Design System. Conceived and developed by <a href="https://chris.blackcoffeeshoppe.com" target="_blank">Chris Fournier</a>.</p>
       </div>
     </footer>
     <!-- scripts -->
@@ -161,7 +161,7 @@
       AOS.init({duration: 600});
     </script>
     <script>
-      var myElement = document.querySelector('header');
+      var myElement = document.querySelector("header");
       var headroom  = new Headroom(myElement);
       headroom.init(); 
     </script>
