--- a/atoms/buttons/buttons.html
+++ b/atoms/buttons/buttons.html
@@ -95,14 +95,14 @@
         <p>The &lt;button&gt; element represents a clickable button, which can be used in forms or anywhere in a document that needs simple, standard button functionality.</p>
         <p><cite><a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/button" target="_blank">&lt;button&gt;</a> by <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/button$history" target="_blank">Mozilla Contributors</a> is licensed under <a href="http://creativecommons.org/licenses/by-sa/2.5/" target="_blank">CC-BY-SA 2.5</a>.</cite></p>
         <h2>Button Details</h2>
-        <p>There are lots and lots and lots of rules for buttons, and there are also lots and lots of options for buttons. It's worth reading up on the dos and don'ts of buttons in order to ensure your buttons will function as expected by all users. Here are some good places to start:</p>
+        <p>There are lots and lots and lots of rules for buttons, and there are also lots and lots of options for buttons. It&rsquo;s worth reading up on the dos and don&rsquo;ts of buttons in order to ensure your buttons will function as expected by all users. Here are some good places to start:</p>
         <ul>
           <li><a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/button" target="_blank">MDN web docs</a></li>
           <li><a href="https://a11y-style-guide.com/style-guide/section-general.html#kssref-general-buttons" target="_blank">A11Y Style Guide</a></li>
           <li><a href="https://www.w3schools.com/tags/tag_button.asp" target="_blank">W3 Schools</a></li>
         </ul>
         <p>Whenever semantically appropriate, anything that functions as a button should be coded as a <code>&lt;button&gt;</code>. However, the Delta Design System does provide CSS classes to make any <code>&lt;span&gt;</code> or <code>&lt;a href&gt;</code> element look like a button.</p>
-        <p>The Delta Design System's normal button uses the <code>$primary</code> color application and handles both the default button state, as well as the <code>:hover</code> and <code>:focus</code> states.</p>
+        <p>The Delta Design System&rsquo;s normal button uses the <code>$primary</code> color application and handles both the default button state, as well as the <code>:hover</code> and <code>:focus</code> states.</p>
       </section>
       <section class="row wide">
         <h2>Button Examples</h2>
@@ -121,7 +121,7 @@
         <div class="row fifty border">
           <div class="column">
             <h3>Secondary Buttons</h3>
-            <p>Add a <code>.secondary</code> class to the button to use the design system's secondary color application.</p>
+            <p>Add a <code>.secondary</code> class to the button to use the design system&rsquo;s secondary color application.</p>
             <button type="button" class="secondary">Button</button>
           </div>
           <div class="column">
@@ -134,7 +134,7 @@
         <div class="row fifty border">
           <div class="column">
             <h3>Reverse Buttons</h3>
-            <p>Though we'd prefer you keep it simple and not use too many button styles, you can also add a <code>.reverse</code> class to the button to create a button with a white background. This option works for both the primary and secondary colors.</p>
+            <p>Though we&rsquo;d prefer you keep it simple and not use too many button styles, you can also add a <code>.reverse</code> class to the button to create a button with a white background. This option works for both the primary and secondary colors.</p>
             <button type="button" class="reverse">Button</button>
             <button type="button" class="reverse secondary">Button</button>
           </div>
@@ -187,7 +187,7 @@
         </div>
       </section>
       <div class="copyright">
-        <p>&copy; 2020 Delta Design System. Conceived and developed by <a href="https://chris.blackcoffeeshoppe.com" target="_blank">Chris Fournier</a>.</p>
+        <p>&copy; 2021 Delta Design System. Conceived and developed by <a href="https://chris.blackcoffeeshoppe.com" target="_blank">Chris Fournier</a>.</p>
       </div>
     </footer>
     <!-- scripts -->
@@ -200,7 +200,7 @@
       AOS.init({duration: 600});
     </script>
     <script>
-      var myElement = document.querySelector('header');
+      var myElement = document.querySelector("header");
       var headroom  = new Headroom(myElement);
       headroom.init(); 
     </script>
