--- a/atoms/chips/chips.html
+++ b/atoms/chips/chips.html
@@ -102,7 +102,7 @@
         <div class="row fifty border">
           <div class="column">
             <h3>Basic Chips</h3>
-            <p>Basic chips have no special features. They're merely a graphical way to present a list.</p>
+            <p>Basic chips have no special features. They&rsquo;re merely a graphical way to present a list.</p>
             <ul class="chips">
               <li><span>Small</span></li>
               <li><span>Medium</span></li>
@@ -123,7 +123,7 @@
         <div class="row fifty border">
           <div class="column">
             <h3>Toggle Chips</h3>
-            <p>Toggle chips are used to turn multiple options on and off. To enable the toggle option, you'll turn the chip into a <code>&lt;button&gt;</code>. This helps to make them keyboard accessible.</p>
+            <p>Toggle chips are used to turn multiple options on and off. To enable the toggle option, you&rsquo;ll turn the chip into a <code>&lt;button&gt;</code>. This helps to make them keyboard accessible.</p>
             <ul class="chips">
               <li class="option-1"><button><svg class="check" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M10 15.172l9.192-9.193 1.415 1.414L10 18l-6.364-6.364 1.414-1.414z"/></svg>Cats</button></li>
               <li class="option-2"><button><svg class="check" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M10 15.172l9.192-9.193 1.415 1.414L10 18l-6.364-6.364 1.414-1.414z"/></svg>Dogs</button></li>
@@ -273,7 +273,7 @@
         </div>
       </section>
       <div class="copyright">
-        <p>&copy; 2020 Delta Design System. Conceived and developed by <a href="https://chris.blackcoffeeshoppe.com" target="_blank">Chris Fournier</a>.</p>
+        <p>&copy; 2021 Delta Design System. Conceived and developed by <a href="https://chris.blackcoffeeshoppe.com" target="_blank">Chris Fournier</a>.</p>
       </div>
     </footer>
     <!-- scripts -->
@@ -286,7 +286,7 @@
       AOS.init({duration: 600});
     </script>
     <script>
-      var myElement = document.querySelector('header');
+      var myElement = document.querySelector("header");
       var headroom  = new Headroom(myElement);
       headroom.init(); 
     </script>
