--- a/molecules/cards/cards.html
+++ b/molecules/cards/cards.html
@@ -92,7 +92,7 @@
     <main>
       <section class="row wide">
         <h1 class="title">Cards</h1>
-        <p>Cards are a convenient means of displaying content composed of different types of objects. They're also well-suited for presenting similar objects whose size or supported actions can vary considerably, like photos with captions of variable length.</p>
+        <p>Cards are a convenient means of displaying content composed of different types of objects. They&rsquo;re also well-suited for presenting similar objects whose size or supported actions can vary considerably, like photos with captions of variable length.</p>
       </section>
       <section class="row wide">
         <h2>Card Examples</h2>
@@ -142,7 +142,7 @@
   &lt;/div&gt;
 &lt;/div&gt;</code></pre>
         </figure>
-        <p>Note that on smaller screens, each card's height is determined by its content. On screens wider than 48rem, however, card height is determined by the tallest card in the row (making all cards in the row the same height). This makes it easier to discover content on each type of device.</p>
+        <p>Note that on smaller screens, each card&rsquo;s height is determined by its content. On screens wider than 48rem, however, card height is determined by the tallest card in the row (making all cards in the row the same height). This makes it easier to discover content on each type of device.</p>
       </section>
     </main>
     <footer>
@@ -171,7 +171,7 @@
         </div>
       </section>
       <div class="copyright">
-        <p>&copy; 2020 Delta Design System. Conceived and developed by <a href="https://chris.blackcoffeeshoppe.com" target="_blank">Chris Fournier</a>.</p>
+        <p>&copy; 2021 Delta Design System. Conceived and developed by <a href="https://chris.blackcoffeeshoppe.com" target="_blank">Chris Fournier</a>.</p>
       </div>
     </footer>
     <!-- scripts -->
@@ -184,7 +184,7 @@
       AOS.init({duration: 600});
     </script>
     <script>
-      var myElement = document.querySelector('header');
+      var myElement = document.querySelector("header");
       var headroom  = new Headroom(myElement);
       headroom.init(); 
     </script>
