--- a/molecules/forms/forms.html
+++ b/molecules/forms/forms.html
@@ -93,7 +93,7 @@
       <section class="row wide">
         <h1 class="title">Forms &amp; Inputs</h1>
         <p>The &lt;input&gt; element is used to create interactive controls for forms in order to accept or retrieve data from/for the user.</p>
-        <p>The function or value of an <code>&lt;input&gt;</code> depends on the value of its 'type attribute'. For more information on <code>&lt;input&gt;</code> values, please see the <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/input" target="_blank">MDN web docs</a>.</p>
+        <p>The function or value of an <code>&lt;input&gt;</code> depends on the value of its &rsquo;type attribute&rsquo;. For more information on <code>&lt;input&gt;</code> values, please see the <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/input" target="_blank">MDN web docs</a>.</p>
         <p>As with other elements in the Delta Design System, we try to be as semantic and use the fewest elements as possible to create our forms. We use css transitions to move the <code>&lt;label&gt;</code> out of place and expose the <code>:placeholder</code> when the <code>&lt;input&gt;</code> is in the <code>:focus</code> state.</p>
         <p>All <code>&lt;input&gt;</code> fields (including <code>&lt;button&gt;</code>) must also include both the <code>&lt;span class=&quot;message&quot;&gt;</code> in order to render the vertical spacing for validation messages properly and eliminate <a href="https://en.wiktionary.org/wiki/jank" target="_blank">jank</a>. To show an <code>.errow</code> or <code>.valid</code> message, simply add a <code>.show</code> class to the appropriate message whenever necessary.</p>
       </section>
@@ -110,7 +110,7 @@
                 <span class="valid">Valid message goes here</span>
               </div>
             </fieldset>
-            <p>Though we're only showing a text input example above, this is the same code structure required for other input types such as email, phone, search, url, etc.</p>
+            <p>Though we&rsquo;re only showing a text input example above, this is the same code structure required for other input types such as email, phone, search, url, etc.</p>
           </div>
           <div class="column">
             <figure>
@@ -347,7 +347,7 @@
       </section>
       <section class="row wide">
         <h2>Small Inputs</h2>
-        <p>If you need to create an input that is less wide than normal, just add a <code>.sm</code> class to that input's <code>fieldset</code>.</p>
+        <p>If you need to create an input that is less wide than normal, just add a <code>.sm</code> class to that input&rsquo;s <code>fieldset</code>.</p>
         <div class="row fifty" style="padding: 0;">
           <div class="column">
             <fieldset class="sm">
@@ -401,7 +401,7 @@
         </div>
       </section>
       <div class="copyright">
-        <p>&copy; 2020 Delta Design System. Conceived and developed by <a href="https://chris.blackcoffeeshoppe.com" target="_blank">Chris Fournier</a>.</p>
+        <p>&copy; 2021 Delta Design System. Conceived and developed by <a href="https://chris.blackcoffeeshoppe.com" target="_blank">Chris Fournier</a>.</p>
       </div>
     </footer>
     <!-- scripts -->
@@ -414,7 +414,7 @@
       AOS.init({duration: 600});
     </script>
     <script>
-      var myElement = document.querySelector('header');
+      var myElement = document.querySelector("header");
       var headroom  = new Headroom(myElement);
       headroom.init(); 
     </script>
