--- a/molecules/messages/messages.html
+++ b/molecules/messages/messages.html
@@ -104,7 +104,7 @@
         <h1 class="title">Messages</h1>
         <p>Messages convey important information related to the state of your app or the device and often request feedback.</p>
         <p>Messages are fixed to the top of the window by default and can be triggered by any means necessary, and most messages will dismiss themselves &ndash; unless they require the user to confirm an action &ndash; after 10 seconds, or the user can dismiss them using the close icon.</p>
-        <p>If you'd rather have your messages on the bottom of the screen, simply add a <code>.bottom</code> class to the parent <code style="white-space: normal">&lt;div class=&quot;messages&quot;&gt;</code>.</p>
+        <p>If you&rsquo;d rather have your messages on the bottom of the screen, simply add a <code>.bottom</code> class to the parent <code style="white-space: normal">&lt;div class=&quot;messages&quot;&gt;</code>.</p>
       </section>
       <section class="row wide">
         <h2>Message Examples</h2>
@@ -331,7 +331,7 @@ $('aside.message svg.close').click( function() {
         </div>
       </section>
       <div class="copyright">
-        <p>&copy; 2020 Delta Design System. Conceived and developed by <a href="https://chris.blackcoffeeshoppe.com" target="_blank">Chris Fournier</a>.</p>
+        <p>&copy; 2021 Delta Design System. Conceived and developed by <a href="https://chris.blackcoffeeshoppe.com" target="_blank">Chris Fournier</a>.</p>
       </div>
     </footer>
     <!-- scripts -->
@@ -344,7 +344,7 @@ $('aside.message svg.close').click( function() {
       AOS.init({duration: 600});
     </script>
     <script>
-      var myElement = document.querySelector('header');
+      var myElement = document.querySelector("header");
       var headroom  = new Headroom(myElement);
       headroom.init(); 
     </script>
