--- a/molecules/pagination-d/pagination.html
+++ b/molecules/pagination-d/pagination.html
@@ -96,7 +96,7 @@
         <p><small><strong>This molecule has been deprecated</strong></small></p>
         <p>According to the <a href="https://a11y-style-guide.com/style-guide/section-navigation.html#kssref-navigation-pagination" target="_blank">A11Y Style Guide</a>, pagination links should be placed inside a <code>&lt;nav&gt;</code> tag whenever possible. The markup should include an <code>aria-label=&quot;pagination&quot;</code> to describe the type of navigation, and you should add <code>aria-current=&quot;page&quot;</code> to the link that points to the current page. Lastly, add a <code>aria-disabled=&quot;true&quot;</code> for any link that is disabled.</p>
         <h2>Pagination Structure</h2>
-        <p>In addition to using a <code>&lt;nav&gt;</code> tag with pagination, we also place these links inside an unordered list (<code>&lt;ul&gt;</code>). The pagination block is horizontally centered by default, but if you'd prefer to see it aligned horizontally on the left, just add a <code>.left</code> class to the <code>&lt;nav class=&quot;pagination&quot;&gt;</code> tag.</p>
+        <p>In addition to using a <code>&lt;nav&gt;</code> tag with pagination, we also place these links inside an unordered list (<code>&lt;ul&gt;</code>). The pagination block is horizontally centered by default, but if you&rsquo;d prefer to see it aligned horizontally on the left, just add a <code>.left</code> class to the <code>&lt;nav class=&quot;pagination&quot;&gt;</code> tag.</p>
         <div class="row wide">
           <nav class="pagination" aria-label="pagination" style="padding: 0;">
             <ul>
@@ -158,7 +158,7 @@
         </div>
       </section>
       <div class="copyright">
-        <p>&copy; 2020 Delta Design System. Conceived and developed by <a href="https://chris.blackcoffeeshoppe.com" target="_blank">Chris Fournier</a>.</p>
+        <p>&copy; 2021 Delta Design System. Conceived and developed by <a href="https://chris.blackcoffeeshoppe.com" target="_blank">Chris Fournier</a>.</p>
       </div>
     </footer>
     <!-- scripts -->
@@ -171,7 +171,7 @@
       AOS.init({duration: 600});
     </script>
     <script>
-      var myElement = document.querySelector('header');
+      var myElement = document.querySelector("header");
       var headroom  = new Headroom(myElement);
       headroom.init(); 
     </script>
