--- a/molecules/search/search.html
+++ b/molecules/search/search.html
@@ -105,7 +105,7 @@
         <h1 class="title">Search</h1>
         <p>&lt;input&gt; elements of type search are very similar to those of type text, except that they are specifically intended for handling search terms. They are basically equivalent in behavior, but user agents may choose to style them differently by default (and, of course, sites may use stylesheets to apply custom styles to them).</p>
         <p><cite><a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/search" target="_blank">&lt;search&gt;</a> by <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/search$history" target="_blank">Mozilla Contributors</a> is licensed under <a href="http://creativecommons.org/licenses/by-sa/2.5/" target="_blank">CC-BY-SA 2.5</a>.</cite></p>
-        <p>Because search is a form of navigation, we've placed it in the navigation organism (which itself is part of the header organism).</p>
+        <p>Because search is a form of navigation, we&rsquo;ve placed it in the navigation organism (which itself is part of the header organism).</p>
         <p>On smaller screens and mobile devices the search form is hidden until the user taps the hamburger icon to reveal the navigation. On screens wider than 48rem, the navigation is fully exposed, and we use a trigger <code>&lt;button&gt;</code> to reveal the search form.</p>
         <p>Note that as of Version 2.2, the search functions should be keyboard accessible.</p>
         <figure>
@@ -161,7 +161,7 @@ $('button.search-toggle svg.search-toggle-close').click(function() {
         </div>
       </section>
       <div class="copyright">
-        <p>&copy; 2020 Delta Design System. Conceived and developed by <a href="https://chris.blackcoffeeshoppe.com" target="_blank">Chris Fournier</a>.</p>
+        <p>&copy; 2021 Delta Design System. Conceived and developed by <a href="https://chris.blackcoffeeshoppe.com" target="_blank">Chris Fournier</a>.</p>
       </div>
     </footer>
     <!-- scripts -->
@@ -174,7 +174,7 @@ $('button.search-toggle svg.search-toggle-close').click(function() {
       AOS.init({duration: 600});
     </script>
     <script>
-      var myElement = document.querySelector('header');
+      var myElement = document.querySelector("header");
       var headroom  = new Headroom(myElement);
       headroom.init(); 
     </script>
