--- a/organisms/banners/banners.html
+++ b/organisms/banners/banners.html
@@ -184,7 +184,7 @@
       </section>
       <section class="row wide">
         <h2>Banner Options</h2>
-        <p>Banners are designed for maximum flexibility and simplicity. They're basically three elements:</p>
+        <p>Banners are designed for maximum flexibility and simplicity. They&rsquo;re basically three elements:</p>
         <ul>
           <li>A banner parent container with either a photo or a color for a background</li>
           <li>An overlay container to mask the photo when necessary to make the text more legible</li>
@@ -218,7 +218,7 @@
         </div>
       </section>
       <div class="copyright">
-        <p>&copy; 2020 Delta Design System. Conceived and developed by <a href="https://chris.blackcoffeeshoppe.com" target="_blank">Chris Fournier</a>.</p>
+        <p>&copy; 2021 Delta Design System. Conceived and developed by <a href="https://chris.blackcoffeeshoppe.com" target="_blank">Chris Fournier</a>.</p>
       </div>
     </footer>
     <!-- scripts -->
@@ -231,7 +231,7 @@
       AOS.init({duration: 600});
     </script>
     <script>
-      var myElement = document.querySelector('header');
+      var myElement = document.querySelector("header");
       var headroom  = new Headroom(myElement);
       headroom.init(); 
     </script>
