--- a/organisms/card-groups/card-groups.html
+++ b/organisms/card-groups/card-groups.html
@@ -92,7 +92,7 @@
     <main>
       <section class="row wide">
         <h1 class="title">Card Groups</h1>
-        <p>We like to use cards and card groups to quickly preview related content. It's a great way to make content more discoverable.</p>
+        <p>We like to use cards and card groups to quickly preview related content. It&rsquo;s a great way to make content more discoverable.</p>
         <p>At the moment, card groups are optimized for groups of 3. You can include fewer or more than 3 cards in a group, but no more than 3 cards will show up on a single line.</p>
       </section>
       <section class="row wide">
@@ -197,7 +197,7 @@
         </div>
       </section>
       <div class="copyright">
-        <p>&copy; 2020 Delta Design System. Conceived and developed by <a href="https://chris.blackcoffeeshoppe.com" target="_blank">Chris Fournier</a>.</p>
+        <p>&copy; 2021 Delta Design System. Conceived and developed by <a href="https://chris.blackcoffeeshoppe.com" target="_blank">Chris Fournier</a>.</p>
       </div>
     </footer>
     <!-- scripts -->
@@ -210,7 +210,7 @@
       AOS.init({duration: 600});
     </script>
     <script>
-      var myElement = document.querySelector('header');
+      var myElement = document.querySelector("header");
       var headroom  = new Headroom(myElement);
       headroom.init(); 
     </script>
