--- a/organisms/footers/footers.html
+++ b/organisms/footers/footers.html
@@ -94,7 +94,7 @@
         <h1 class="title">Footers</h1>
         <p>The &lt;footer&gt; element represents a footer for its nearest sectioning content or sectioning root element. A footer typically contains information about the author of the section, copyright data or links to related documents.</p>
         <p><cite><a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/footer" target="_blank">&lt;footer&gt;</a> by <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/footer$history" target="_blank">Mozilla Contributors</a> is licensed under <a href="http://creativecommons.org/licenses/by-sa/2.5/" target="_blank">CC-BY-SA 2.5</a>.</cite></p>
-        <p>The Delta Design System's footer is made up of 3 components:</p>
+        <p>The Delta Design System&rsquo;s footer is made up of 3 components:</p>
         <ul>
           <li>Navigation</li>
           <li>Brand content: logo and social links</li>
@@ -160,7 +160,7 @@
         </div>
       </section>
       <div class="copyright">
-        <p>&copy; 2020 Delta Design System. Conceived and developed by <a href="https://chris.blackcoffeeshoppe.com" target="_blank">Chris Fournier</a>.</p>
+        <p>&copy; 2021 Delta Design System. Conceived and developed by <a href="https://chris.blackcoffeeshoppe.com" target="_blank">Chris Fournier</a>.</p>
       </div>
     </footer>
     <!-- scripts -->
@@ -173,7 +173,7 @@
       AOS.init({duration: 600});
     </script>
     <script>
-      var myElement = document.querySelector('header');
+      var myElement = document.querySelector("header");
       var headroom  = new Headroom(myElement);
       headroom.init(); 
     </script>
