--- a/organisms/navigation/navigation.html
+++ b/organisms/navigation/navigation.html
@@ -99,7 +99,7 @@
       <section class="row wide">
         <h2>Navigation Structure</h2>
         <p>In both the <code>&lt;header&gt;</code> and <code>&lt;footer&gt;</code> the <code>&lt;navigation&gt;</code> is a simple <code>&lt;ul&gt;</code>. However, the <code>&lt;header&gt;</code> also includes a button for mobile to open and close the header navigation.</p>
-        <p>Note that we also have a <a href="../../molecules/search/search.html">Search</a> molecule that can be added to your navigation.
+        <p>Note that we also have a <a href="../../molecules/search/search.html">Search</a> molecule that can be added to your navigation.</p>
         <div class="row thirds">
           <div class="column">
             <h3>Header Navigation</h3>
@@ -197,7 +197,7 @@
         </div>
       </section>
       <div class="copyright">
-        <p>&copy; 2020 Delta Design System. Conceived and developed by <a href="https://chris.blackcoffeeshoppe.com" target="_blank">Chris Fournier</a>.</p>
+        <p>&copy; 2021 Delta Design System. Conceived and developed by <a href="https://chris.blackcoffeeshoppe.com" target="_blank">Chris Fournier</a>.</p>
       </div>
     </footer>
     <!-- scripts -->
@@ -210,7 +210,7 @@
       AOS.init({duration: 600});
     </script>
     <script>
-      var myElement = document.querySelector('header');
+      var myElement = document.querySelector("header");
       var headroom  = new Headroom(myElement);
       headroom.init(); 
     </script>
