--- a/organisms/tabs/tabs.html
+++ b/organisms/tabs/tabs.html
@@ -116,7 +116,7 @@
           </div>
           <div class="panel" id="tab-panel-2" role="tabpanel" aria-labelledby="tab-label-2" aria-hidden="true">
             <h3>Tab 2</h3>
-            <p>Never limit yourself because of others' limited imagination; never limit others because of your own limited imagination.</p>
+            <p>Never limit yourself because of others&rsquo; limited imagination; never limit others because of your own limited imagination.</p>
           </div>
           <div class="panel" id="tab-panel-3" role="tabpanel" aria-labelledby="tab-label-3" aria-hidden="true">
             <h3>Tab 3</h3>
@@ -149,7 +149,7 @@
     &lt;/div&gt;
     &lt;div class=&quot;panel&quot; id=&quot;tab-panel-2&quot; role=&quot;tabpanel&quot; aria-labelledby=&quot;tab-label-2&quot; aria-hidden=&quot;true&quot;&gt;
       &lt;h3&gt;Tab 2&lt;/h3&gt;
-      &lt;p&gt;Never limit yourself because of others' limited imagination; never limit others because of your own limited imagination.&lt;/p&gt;
+      &lt;p&gt;Never limit yourself because of others&rsquo; limited imagination; never limit others because of your own limited imagination.&lt;/p&gt;
     &lt;/div&gt;
     &lt;div class=&quot;panel&quot; id=&quot;tab-panel-3&quot; role=&quot;tabpanel&quot; aria-labelledby=&quot;tab-label-3&quot; aria-hidden=&quot;true&quot;&gt;
       &lt;h3&gt;Tab 3&lt;/h3&gt;
@@ -207,7 +207,7 @@ $('li.tab-item button#tab-label-3').click(function() {
         </div>
       </section>
       <div class="copyright">
-        <p>&copy; 2020 Delta Design System. Conceived and developed by <a href="https://chris.blackcoffeeshoppe.com" target="_blank">Chris Fournier</a>.</p>
+        <p>&copy; 2021 Delta Design System. Conceived and developed by <a href="https://chris.blackcoffeeshoppe.com" target="_blank">Chris Fournier</a>.</p>
       </div>
     </footer>
     <!-- scripts -->
@@ -220,7 +220,7 @@ $('li.tab-item button#tab-label-3').click(function() {
       AOS.init({duration: 600});
     </script>
     <script>
-      var myElement = document.querySelector('header');
+      var myElement = document.querySelector("header");
       var headroom  = new Headroom(myElement);
       headroom.init(); 
     </script>
