--- a/style/colors/colors.html
+++ b/style/colors/colors.html
@@ -149,7 +149,7 @@
       </section>
       <section class="row wide">
         <h2>Color Styles</h2>
-        <p>Here's how we're currently declaring colors in the Delta Design System:</p>
+        <p>Here&rsquo;s how we&rsquo;re currently declaring colors in the Delta Design System:</p>
         <h3>Global Colors</h3>
         <div class="color-chips">
           <div class="chip">
@@ -252,7 +252,7 @@
       </section>
       <section class="row wide">
         <h2>Color Application</h2>
-        <p>To apply a <code>background-color</code> using any of the defined colors in the system, simply add a <code>.bg-</code> prefix to any of the color declarations above. For example, to make an element's background light gray, add a <code>.bg-lt-gray</code> to the appropriate tag.</p>
+        <p>To apply a <code>background-color</code> using any of the defined colors in the system, simply add a <code>.bg-</code> prefix to any of the color declarations above. For example, to make an element&rsquo;s background light gray, add a <code>.bg-lt-gray</code> to the appropriate tag.</p>
       </section>
     </main>
     <footer>
@@ -281,7 +281,7 @@
         </div>
       </section>
       <div class="copyright">
-        <p>&copy; 2020 Delta Design System. Conceived and developed by <a href="https://chris.blackcoffeeshoppe.com" target="_blank">Chris Fournier</a>.</p>
+        <p>&copy; 2021 Delta Design System. Conceived and developed by <a href="https://chris.blackcoffeeshoppe.com" target="_blank">Chris Fournier</a>.</p>
       </div>
     </footer>
     <!-- scripts -->
@@ -294,7 +294,7 @@
       AOS.init({duration: 600});
     </script>
     <script>
-      var myElement = document.querySelector('header');
+      var myElement = document.querySelector("header");
       var headroom  = new Headroom(myElement);
       headroom.init(); 
     </script>
