--- a/about/about.html
+++ b/about/about.html
@@ -98,7 +98,7 @@
       <section class="row wide">
         <h1 class="title">About the Delta Design System</h1>
         <p>I create handcrafted, responsive websites and applications for a living and for fun, and I frequently find myself reusing my own code. So I decided to turn my work into an open source design system that makes it easy to design responsive websites, apps, and prototypes with code that is semantic, flexible, customizable, and wicked efficient.</p>
-        <p>There are lots of available frameworks to choose from, and I've used more than a few:</p>
+        <p>There are lots of available frameworks to choose from, and I&rsquo;ve used more than a few:</p>
         <ul>
           <li><a href="https://getbootstrap.com/" target="_blank">Bootstrap</a></li>
           <li><a href="https://foundation.zurb.com" target="_blank">Foundation</a></li>
@@ -108,22 +108,22 @@
       </section>
       <section class="row wide">
         <h2>Inspiration</h2>
-        <p>I've been designing for the web for&hellip; well, let's just say I've been designing for the web for awhile now. At some point in my early history, someone said that &ndash; if you really want to know what you're doing &ndash; you need to design in html and css. I took that to heart and have been looking at source code like it's the Matrix and designing with html and css ever since. Some things, however, had a major impact on me along the way.</p>
+        <p>I&rsquo;ve been designing for the web for&hellip; well, let&rsquo;s just say I&rsquo;ve been designing for the web for awhile now. At some point in my early history, someone said that &ndash; if you really want to know what you&rsquo;re doing &ndash; you need to design in html and css. I took that to heart and have been looking at source code like it&rsquo;s the Matrix and designing with html and css ever since. Some things, however, had a major impact on me along the way.</p>
         <h3><a href="https://alistapart.com/article/responsive-web-design/" target="_blank">Responsive Web Design</a></h3>
-        <p>It's no exaggeration to say that <a href="https://ethanmarcotte.com" target="_blank">Ethan Marcotte's</a> <a href="https://alistapart.com/article/responsive-web-design/" target="_blank">Responsive Web Design</a> article changed my life. Everything came into focus when I read that article. I love everything about the concept of responsive design. I am always stunned when I come across a project that does not take this approach from the get-go.</p>
+        <p>It&rsquo;s no exaggeration to say that <a href="https://ethanmarcotte.com" target="_blank">Ethan Marcotte&rsquo;s</a> <a href="https://alistapart.com/article/responsive-web-design/" target="_blank">Responsive Web Design</a> article changed my life. Everything came into focus when I read that article. I love everything about the concept of responsive design. I am always stunned when I come across a project that does not take this approach from the get-go.</p>
         <h3><a href="https://developer.mozilla.org/en-US/docs/Learn/CSS/CSS_layout/Flexbox" target="_blank">Flexbox</a></h3>
         <p>Working almost hand-in-hand with responsive design, <a href="https://developer.mozilla.org/en-US/docs/Learn/CSS/CSS_layout/Flexbox" target="_blank">flexbox</a> was a concept I was able to get behind immediately. I was always a little annoyed using things like <code>float</code> and <code>position: absolute</code> to get the layouts I wanted, and I was almost always faced issues with the layouts anyway.</p>
         <p>I may not now (or ever) have a complete grasp on flexbox, but the concept and the syntax was easy enough to change the way I thought about code and design.</p>
         <h3><a href="https://sass-lang.com" target="_blank">Sass</a></h3>
-        <p>I like to work quickly, and I don't like making constant micro-adjustments to my css in order to make things work for a singular instance or purpose. It took me a long time to ramp up to <a href="https://sass-lang.com" target="_blank">Sass</a>, but once I was able to start using the basics, it had a profound effect on the way I went about my work.</p>
-        <p>I've always been a little picky about my css (even though there's more madness than method right now&hellip; could use some help with that), but with Sass I was able to make things more flexible and robust while still keeping things tidy. Sass also makes it much easier to make wholesale adjustments to my css without having to spend an eternity searching through every line of code.</p>
+        <p>I like to work quickly, and I don&rsquo;t like making constant micro-adjustments to my css in order to make things work for a singular instance or purpose. It took me a long time to ramp up to <a href="https://sass-lang.com" target="_blank">Sass</a>, but once I was able to start using the basics, it had a profound effect on the way I went about my work.</p>
+        <p>I&rsquo;ve always been a little picky about my css (even though there&rsquo;s more madness than method right now&hellip; could use some help with that), but with Sass I was able to make things more flexible and robust while still keeping things tidy. Sass also makes it much easier to make wholesale adjustments to my css without having to spend an eternity searching through every line of code.</p>
       </section>
       <section class="row wide">
         <h2>Principles</h2>
-        <p>I've got principles, and they're a big reason why I use my code over and over again. I believe that products should be engineered to create better experiences for the user (and achieve applicable business goals and objectives). I want my work to be thoughtful and deliberate. A design system should help us work together to provide consistent experiences that perform well across all devices. The following principles have been part of my lexicon for years, so naturally they would also be a big part of the Delta Design System.</p>
+        <p>I&rsquo;ve got principles, and they&rsquo;re a big reason why I use my code over and over again. I believe that products should be engineered to create better experiences for the user (and achieve applicable business goals and objectives). I want my work to be thoughtful and deliberate. A design system should help us work together to provide consistent experiences that perform well across all devices. The following principles have been part of my lexicon for years, so naturally they would also be a big part of the Delta Design System.</p>
         <h3>Efficiency</h3>
         <p><em>Make the best thing the easiest thing</em></p>
-        <p>Think simplicity: you are going to have to own this thing you build, and you are going to be tasked with supporting it's continued evolution. We want to be nimble. We should never do something just because we can or because we think it is cool. We should only do something because it is the right thing to do for the given purpose. The least amount of code is the right amount of code.</p>
+        <p>Think simplicity: you are going to have to own this thing you build, and you are going to be tasked with supporting it&rsquo;s continued evolution. We want to be nimble. We should never do something just because we can or because we think it is cool. We should only do something because it is the right thing to do for the given purpose. The least amount of code is the right amount of code.</p>
         <p>Standards and decisions are codified and used to provide designers and developers easy-to-use tools to expertly and efficiently deliver the highest quality experiences to users. The goal is to simplify and standardize.</p>
         <h3>Accessibility</h3>
         <p><em>Accessibility is not negotiable</em></p>
@@ -136,7 +136,7 @@
       <section class="row wide">
         <h2>Please Get Involved</h2>
         <p>I used to think I knew it all. Maybe I did at one time. However, a few years ago I came to the realization that I do not know it all. My favorite part of open source code is that it is a community, and I would love it if people would contribute to the project. There is still lots to do, and this project would be better with more involvement. At least I believe it would be.</p>
-        <p>I'll be keeping an eye on <a href="https://github.com/cdfournier/delta-design-system/issues" target="_blank">issues</a>. I'll be tracking scheduled <a href="https://github.com/cdfournier/delta-design-system/projects">projects</a> with updates and fixes. I hope to add a code guideline and contribution guidelines in the near future too.</p>
+        <p>I&rsquo;ll be keeping an eye on <a href="https://github.com/cdfournier/delta-design-system/issues" target="_blank">issues</a>. I&rsquo;ll be tracking scheduled <a href="https://github.com/cdfournier/delta-design-system/projects">projects</a> with updates and fixes. I hope to add a code guideline and contribution guidelines in the near future too.</p>
         <p>Whatever your expertise: I need you. Cheers.</p>
       </section>
     </main>
@@ -166,7 +166,7 @@
         </div>
       </section>
       <div class="copyright">
-        <p>&copy; 2020 Delta Design System. Conceived and developed by <a href="https://chris.blackcoffeeshoppe.com" target="_blank">Chris Fournier</a>.</p>
+        <p>&copy; 2021 Delta Design System. Conceived and developed by <a href="https://chris.blackcoffeeshoppe.com" target="_blank">Chris Fournier</a>.</p>
       </div>
     </footer>
     <!-- scripts -->
@@ -179,7 +179,7 @@
       AOS.init({duration: 600});
     </script>
     <script>
-      var myElement = document.querySelector('header');
+      var myElement = document.querySelector("header");
       var headroom  = new Headroom(myElement);
       headroom.init(); 
     </script>
