--- a/demo/about/index.html
+++ b/demo/about/index.html
@@ -185,7 +185,7 @@
       AOS.init({duration: 1000});
     </script>
     <script>
-      var myElement = document.querySelector('header');
+      var myElement = document.querySelector("header");
       var headroom  = new Headroom(myElement);
       headroom.init(); 
     </script>
