--- a/demo/eat/index.html
+++ b/demo/eat/index.html
@@ -316,7 +316,7 @@
       AOS.init({duration: 1000});
     </script>
     <script>
-      var myElement = document.querySelector('header');
+      var myElement = document.querySelector("header");
       var headroom  = new Headroom(myElement);
       headroom.init(); 
     </script>
