--- a/demo/stay/index.html
+++ b/demo/stay/index.html
@@ -231,7 +231,7 @@
       AOS.init({duration: 1000});
     </script>
     <script>
-      var myElement = document.querySelector('header');
+      var myElement = document.querySelector("header");
       var headroom  = new Headroom(myElement);
       headroom.init(); 
     </script>
