--- a/index.html
+++ b/index.html
@@ -212,23 +212,13 @@
         <p>I create handcrafted, responsive websites and applications, and I frequently find myself reusing my own code. So I decided to turn my work into an open source framework that makes it easy to design responsive websites, apps, and prototypes with code that is semantic, flexible, customizable, and wicked efficient.</p>
         <p class="icon" style="width: 8rem;"><a href="about/about.html">Learn more<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
       </section>
-      <section class="banner split" style="margin: 0;">
-        <figure>
-          <img src="assets/images/sketch-mockup-01-1x.png" srcset="assets/images/sketch-mockup-01-1x.png 1x, assets/images/sketch-mockup-01-2x.png 2x" alt="Sketch library on MacBook Pro">
-        </figure>
-        <div class="text">
-          <h2><!-- <span class="badge"><span class="bg-primary">Updated</span></span> -->Sketch Library</h2>
-          <p>Download the updated Sketch library with an improved component symbol system and a page of examples based on the designs for the new demo.</p>
-          <p class="icon"><a href="https://sketch.cloud/s/dvOG2" target="_blank">Download<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
-        </div>
-      </section>
-      <section class="banner split reverse bg-lt-gray">
+      <section class="banner split">
         <figure>
           <img src="assets/images/demo-mockup-01-1x.png" srcset="assets/images/demo-mockup-01-1x.png 1x, assets/images/demo-mockup-01-2x.png 2x" alt="Demo site mockup on an iPad">
         </figure>
         <div class="text">
           <h2><!-- <span class="badge"><span class="bg-primary">New</span></span> -->Demo Site</h2>
-          <p>I've created a demo site to demonstrate how easy it is to design with the Delta Design System.</p>
+          <p>I&rsquo;ve created a demo site to demonstrate how easy it is to design with the Delta Design System.</p>
           <p class="icon"><a href="https://cdfournier.github.io/delta-design-system/demo/index.html" target="_blank">Check it out<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
         </div>
       </section>
@@ -282,7 +272,7 @@
         </div>
       </section>
       <div class="copyright">
-        <p>&copy; 2020 Delta Design System. Conceived and developed by <a href="https://chris.blackcoffeeshoppe.com" target="_blank">Chris Fournier</a>.</p>
+        <p>&copy; 2021 Delta Design System. Conceived and developed by <a href="https://chris.blackcoffeeshoppe.com" target="_blank">Chris Fournier</a>.</p>
       </div>
     </footer>
     <!-- scripts -->
@@ -295,7 +285,7 @@
       AOS.init({duration: 600});
     </script>
     <script>
-      var myElement = document.querySelector('header');
+      var myElement = document.querySelector("header");
       var headroom  = new Headroom(myElement);
       headroom.init(); 
     </script>
