--- a/molecules/media-grid-items/media-grid-items.html
+++ b/molecules/media-grid-items/media-grid-items.html
@@ -95,9 +95,9 @@
         <p>Media grid items contain a media element &ndash; typically an image &ndash; on the left with a headline and text on the right (or, in the Delta Design System, vice-versa). When grouped together in a media grid block, this pattern is a perfect component to preview content such as blog posts, user information, and more.</p>
         <p>Here are some of the features and options of media grid items:</p>
         <ul>
-          <li>On smaller screens, menu grid items stack vertically, and those menu grid items stack one on top of the next in the block.</li>
-          <li>On screens wider than 48rem, each menu grid item changes to a horizontal alignment.</li>
-          <li>Menu grid items are left-aligned horizontally be default. Use the <code>.reverse</code> class to change to right-aligned. In this way, you can actually create a menu grid block with items that flip in either direction.</li>
+          <li>On smaller screens, menu grid items stack vertically, and those media grid items stack one on top of the next in the block.</li>
+          <li>On screens wider than 48rem, each media grid item changes to a horizontal alignment.</li>
+          <li>Media grid items are left-aligned horizontally be default. Use the <code>.reverse</code> class to change to right-aligned. In this way, you can actually create a media grid block with items that flip in either direction.</li>
         </ul>
       </section>
       <section class="row wide">
@@ -157,7 +157,7 @@
         </div>
       </section>
       <div class="copyright">
-        <p>&copy; 2020 Delta Design System. Conceived and developed by <a href="https://chris.blackcoffeeshoppe.com" target="_blank">Chris Fournier</a>.</p>
+        <p>&copy; 2021 Delta Design System. Conceived and developed by <a href="https://chris.blackcoffeeshoppe.com" target="_blank">Chris Fournier</a>.</p>
       </div>
     </footer>
     <!-- scripts -->
@@ -170,7 +170,7 @@
       AOS.init({duration: 600});
     </script>
     <script>
-      var myElement = document.querySelector('header');
+      var myElement = document.querySelector("header");
       var headroom  = new Headroom(myElement);
       headroom.init(); 
     </script>
