--- a/organisms/gallery-grid/gallery-grid.html
+++ b/organisms/gallery-grid/gallery-grid.html
@@ -92,14 +92,14 @@
     <main>
       <section class="row wide">
         <h1 class="title">Gallery Grid</h1>
-        <p>Inspired in part by Apple's cover flow and the UX of some Apple TV apps, the gallery grid is a visual list of card-like elements.</p>
+        <p>Inspired in part by Apple&rsquo;s cover flow and the UX of some Apple TV apps, the gallery grid is a visual list of card-like elements.</p>
         <p>At the moment, the gallery grid is a custom <code>&lt;ul&gt;</code> that spills out of the window horizontally enabling the user to scroll through entire list.</p>
         <h2>Gallery Grid Options</h2>
         <ul>
           <li>Make any item in the list twice as wide by adding a <code>.double</code> class to the list item.</li>
-          <li>If you'd like to add some space between each grid item in the gallery, add a <code>.margin</code> class to the <code>&lt;ul&gt;</code>.</li>
+          <li>If you&rsquo;d like to add some space between each grid item in the gallery, add a <code>.margin</code> class to the <code>&lt;ul&gt;</code>.</li>
         </ul>
-        <p>We're continuing to work on an option that would enable you to wrap gallery grids so there is no overflow off the screen.</p>
+        <p>We&rsquo;re continuing to work on an option that would enable you to wrap gallery grids so there is no overflow off the screen.</p>
       </section>
       <section class="row">
         <h2>Gallery Grid Example</h2>
@@ -157,7 +157,7 @@
         </div>
       </section>
       <div class="copyright">
-        <p>&copy; 2020 Delta Design System. Conceived and developed by <a href="https://chris.blackcoffeeshoppe.com" target="_blank">Chris Fournier</a>.</p>
+        <p>&copy; 2021 Delta Design System. Conceived and developed by <a href="https://chris.blackcoffeeshoppe.com" target="_blank">Chris Fournier</a>.</p>
       </div>
     </footer>
     <!-- scripts -->
@@ -170,7 +170,7 @@
       AOS.init({duration: 600});
     </script>
     <script>
-      var myElement = document.querySelector('header');
+      var myElement = document.querySelector("header");
       var headroom  = new Headroom(myElement);
       headroom.init(); 
     </script>
